@@ -1,3 +1,9 @@
+version <unreleased>
+
+Extractors
+* [thisav] Improve title extraction (#10682)
+
+
 version 2016.09.18
 
 Core
